k8s/05-execution-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-service
  namespace: codereviewer
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: execution-service
  template:
    metadata:
      labels:
        app: execution-service
    spec:
      containers:
      - name: execution-service
        image: acrappregistrydr41xn.azurecr.io/execution-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: execution-service
  namespace: codereviewer
spec:
  selector:
    app: execution-service
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
