k8s/06-ai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: codereviewer

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: ai-service

  template:
    metadata:
      labels:
        app: ai-service

    spec:
      containers:
      - name: ai-service
        image: thanusri22/ai-service:v2
        imagePullPolicy: Always

        ports:
        - containerPort: 8003

        resources:
          requests:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: codereviewer
spec:
  selector:
    app: ai-service
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
