k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codereviewer-ingress
  namespace: codereviewer
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8501

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8001

      - path: /ai
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 8003

      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              number: 8004

      - path: /execute
        pathType: Prefix
        backend:
          service:
            name: execution-service
            port:
              number: 8002
